Updated Java instrumentation logic